methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:15: error: not found: value doite
  gauche();allerCentre();doite
                         ^